<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:id="@+id/group1" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
    </group>

    <group android:id="@+id/group2" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_crear_productos"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_crear_productos" />
        <item
            android:id="@+id/nav_actualizar_productos"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_actualizar_productos" />
        <item
            android:id="@+id/nav_eliminar_productos"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_eliminar_productos" />
        <item
            android:id="@+id/nav_ver_productos"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_ver_productos" />
    </group>

    <group android:id="@+id/group3" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_busqueda_productos"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_busqueda_productos" />
        <item
            android:id="@+id/nav_lector_codigoqr_barras"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_lector_codigoqr_barras" />
    </group>

    <group android:id="@+id/group4" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_configuracion"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_configuracion" />
        <item
            android:id="@+id/nav_acerca_de"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_acerca_de" />
    </group>

</menu>
