<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.asha_inventario.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_crear_productos"
        android:name="com.example.asha_inventario.ui.gallery.GalleryFragment"
        android:label="@string/menu_crear_productos"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_actualizar_productos"
        android:name="com.example.asha_inventario.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_actualizar_productos"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_eliminar_productos"
        android:name="com.example.asha_inventario.ui.eliminar_productos.Eliminar_productosFragment"
        android:label="@string/menu_eliminar_productos"
        tools:layout="@layout/fragment_eliminar_productos" />
</navigation>